# automated-browser

./: .gitignore  .isort.cfg  LICENSE  README.md  pyproject.toml
src/automated_browser/: main.py
src/automated_browser/data/settings/: browser_settings.json
src/automated_browser/dev/: browsersettings.py  dev_tor_start.py
src/automated_browser/driver/: filepaths.py  firefox.py  torbrowser.py
